--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta content="#0A8FDC" name="theme-color"/>
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
     <meta content="React material admin template" name="description"/>
-    <meta property="og:title" content="Crema- React Material Admin Template"/>
+    <meta property="og:title" content="EZ Biz"/>
     <meta property="og:description" content="Crema is purely based on Material UI components and follows Google’s Material Design guidelines"/>
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png"/>
-    <meta property="og:site_name" content="Crema Material Admin Template"/>
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png"/>
+    <meta property="og:site_name" content="EZ Biz"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places,geometry,drawing&key=AIzaSyBtgCpqXBu7Mdl2bzhhHnutAroyEteQo9s">
